Add annotation and connection to the diagram widget example.

--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -60,8 +60,11 @@
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/AttributeFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/DiagramFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/DiagramFigureFactory.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/DiagramWidget/AnnotationFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/ClassFigure.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/DiagramWidget/ConnectionFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/DiagramWidget.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/DiagramWidget/InheritanceConnectionFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DocumentEditor/DocumentEditor.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElement.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElementEditor.js"></script>
