Add DiagramWidgetTest to the suite.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
@@ -20,6 +20,7 @@
          newsuite.addTestPage("../ObjectTests/BrowserWidget/BrowserWidgetTestSuite.html");
          newsuite.addTestPage("../ObjectTests/ComponentStateManager/ComponentStateManagerTest.html");
          newsuite.addTestPage("../ObjectTests/Desktop/DesktopTestSuite.html");
+         newsuite.addTestPage("../ObjectTests/DiagramWidget/DiagramWidgetTest.html");
          newsuite.addTestPage("../ObjectTests/FundamentalTypes/FundamentalTypesTestSuite.html");
          newsuite.addTestPage("../ObjectTests/HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html");
          newsuite.addTestPage("../ObjectTests/HtmlDocument/HtmlDocumentTest.html");
