--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/NewsReaderWidget/NewsReaderTestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/NewsReaderWidget/NewsReaderTestSuite.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
 
 <html>
   <head>
@@ -16,7 +16,7 @@
    <script type="text/javascript">
       function suite() {
         var newsuite = new JsTestSuite();
-		  newsuite.addTestPage("../ObjectTests/NewsReaderWidget/NewsReaderTest.html");
+		  newsuite.addTestPage("../ObjectTests/NewsReaderWidget/NewsReaderWidgetTest.html");
 		  newsuite.addTestPage("../ObjectTests/NewsReaderWidget/RssResourceTest.html");
 		  return newsuite;
 		}
