--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/NewsReaderWidget/NewsReaderWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/NewsReaderWidget/NewsReaderWidgetTest.html
@@ -69,6 +69,8 @@
  
    
    <script type="text/javascript" src="../../ObjectTests/NewsReaderWidget/NewsReaderWidgetTest.js"></script>
+   <script type="text/javascript" src="../../ObjectTests/NewsReaderWidget/RssChannelTest.js"></script>
+   <script type="text/javascript" src="../../ObjectTests/NewsReaderWidget/RssItemTest.js"></script>
    
 	<script type="text/javascript">
 		window.addEvent('domready', function() {
@@ -82,6 +84,6 @@
 <body>
 	<h1>NewsReaderWidget.js test page</H1>
 	<p>This page contains tests for NewsReaderWidget.js JavaScript class.</P>
-	<div id="NewsReaderWidget">Widget container.</div>
+	<div id="NewsReaderWidget"></div>
 </body>
 </html>
