--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -107,6 +107,7 @@
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/LinkedHashMap.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/OptionsResource.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/RemoteResource.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/ResourceUri.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/TimeOutException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/UndefinedXmlResourceException.js"></script>
@@ -123,6 +124,9 @@
    <script type="text/javascript" src="JavaScript/Source/Internationalization/XMLResourceBundle.js"></script>
    <script type="text/javascript" src="JavaScript/Source/LanguageSelectorWidget/LanguageChangedMessage.js"></script>
    <script type="text/javascript" src="JavaScript/Source/LanguageSelectorWidget/LanguageSelectorWidget.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/NewsReaderWidget/NewsReaderWidget.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/NewsReaderWidget/RssChannel.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/NewsReaderWidget/RssItem.js"></script>
    <script type="text/javascript" src="JavaScript/Source/PhotoGaleryWidget/PhotoGaleryImage.js"></script>
    <script type="text/javascript" src="JavaScript/Source/PhotoGaleryWidget/PhotoGaleryWidget.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ResourceManager/DocumentResource.js"></script>
