Verify boolean option value handling.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/OptionsResourceTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/OptionsResourceTest.html
@@ -70,6 +70,7 @@
 		   assertThat( optionsResource.getOptions()['widgetContainerId'], equalTo( "HorizontalMenuBar" ));
 		   assertThat( optionsResource.getOptions()['widgetDefinitionURI'], equalTo( "../HierarchicalMenuWidget/MenuDefinition.xml" ));
 		   assertThat( optionsResource.getOptions()['arrayOfValues'].length, equalTo( 2 ));
+		   assertThat( optionsResource.getOptions()['booleanValue'], is( true ));
 		}
 		
 		
