Add NewsReaderWidget to the TestSuite.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
@@ -26,7 +26,7 @@
          newsuite.addTestPage("../ObjectTests/HtmlDocument/HtmlDocumentTest.html");
          newsuite.addTestPage("../ObjectTests/Internationalization/InternalizationTestSuite.html");
          newsuite.addTestPage("../ObjectTests/LanguageSelectorWidget/LanguageSelectorWidgetTest.html");
-          //newsuite.addTestPage("../ObjectTests/NewsReaderWidget/NewsReaderWidgetTestSuite.html");
+         newsuite.addTestPage("../ObjectTests/NewsReaderWidget/NewsReaderWidgetTest.html");
          newsuite.addTestPage("../ObjectTests/PhotoGaleryWidget/PhotoGaleryWidgetTestSuite.html");
          newsuite.addTestPage("../ObjectTests/ResourceManager/ResourceManagerTest.html");
          newsuite.addTestPage("../ObjectTests/Singleton/SingletonTest.html");
