--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopTest.html
@@ -87,6 +87,7 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/LinkedHashMap.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/OptionsResource.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/RemoteResource.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/ResourceUri.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/TimeOutException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/UniqueId.js"></script>
@@ -101,6 +102,9 @@
    <script type="text/javascript" src="../../Source/Internationalization/XMLResourceBundle.js"></script>
    <script type="text/javascript" src="../../Source/LanguageSelectorWidget/LanguageChangedMessage.js"></script>
    <script type="text/javascript" src="../../Source/LanguageSelectorWidget/LanguageSelectorWidget.js"></script>
+   <script type="text/javascript" src="../../Source/NewsReaderWidget/NewsReaderWidget.js"></script>
+   <script type="text/javascript" src="../../Source/NewsReaderWidget/RssChannel.js"></script>
+   <script type="text/javascript" src="../../Source/NewsReaderWidget/RssItem.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentResource.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentImage.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentScript.js"></script>
