Handle anchor elements click event in TextAreaEditor.

--- a/Implementation/WebTier/WebContent/Content/HtmlDocument_en.html
+++ b/Implementation/WebTier/WebContent/Content/HtmlDocument_en.html
@@ -2,3 +2,8 @@
 <h1>HTML Content</h1>
 <h2>Smart Document Example</h2>
 <p>This document's content consist of only pure HTML elements. Doesn't contains smart template (static) elements, neigther data sources. This feature mainly used for publishing existing content, without modification.</p>
+<p>HTML document can contain internal and external links:</p>
+<ul>
+   <li>External link: <a href="http://processpuzzle.com" target="_blank">ProcessPuzzle public website</a></li>
+   <li>Internal link: <a href="#" onclick="top.webUIController.loadSmartDocument( 'Content/DynamicDocument.xml', 'Content/DynamicContent' );">Dynamic document example</a></li>
+</ul>
