--- a/Implementation/WebTier/WebContent/Content/HtmlDocument_hu.html
+++ b/Implementation/WebTier/WebContent/Content/HtmlDocument_hu.html
@@ -2,3 +2,8 @@
 <h1>HTML tartalom</h1>
 <h2>Okos dokumentum példa</h2>
 <p>Ennek a dokumentumnak a tartalma pusztán HTML elemekből áll. Itt nincs sem dokumentum sablon elem (statikus elem), sem adatforrás. Ez a szolgáltatás leginkább meglévő tartalom, változtatás nélküli megjelenítésére használható.</p>
+<p>Egy pusztán HTML tartalmat megjelenítő dokumentum tartalmazhat belső és külső hivatkozásokat:</p>
+<ul>
+   <li>Külső hivatkozás: <a href="http://processpuzzle.com" target="_blank">ProcessPuzzle</a></li>
+   <li>Belső hivatkozás: <a href="#" onclick="top.webUIController.loadSmartDocument( 'Content/DynamicDocument.xml', 'Content/DynamicContent' );">Dinamikus dokumentum</a></li>
+</ul>
