Include StringTokenizer as WebUIController.determinesAvailableLocales() uses.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/AbstractDocument/AbstractDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/AbstractDocument/AbstractDocumentTest.html
@@ -46,6 +46,7 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/IllegalArgumentException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/OptionsResource.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/UndefinedXmlResourceException.js"></script>
    <script type="text/javascript" src="../../Source/HierarchicalMenuWidget/MenuSelectedMessage.js"></script>
