--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/CompositeDataElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/CompositeDataElementTest.html
@@ -50,6 +50,7 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/IllegalArgumentException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/LinkedHashMap.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/TimeOutException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/Locale.js"></script>
