--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HtmlDocument/HtmlDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HtmlDocument/HtmlDocumentTest.html
@@ -53,6 +53,7 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/IllegalArgumentException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/OptionsResource.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
    <script type="text/javascript" src="../../Source/HierarchicalMenuWidget/MenuSelectedMessage.js"></script>
    <script type="text/javascript" src="../../Source/HtmlDocument/HtmlDocument.js"></script>
