WidgetElementFactory.createAnchor() when uri is local and query string ?documentType=SMART then invokes webUIController.loadSmartDocument().

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/BrowserWidget/WidgetElementFactoryTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/BrowserWidget/WidgetElementFactoryTest.html
@@ -45,6 +45,7 @@
    <script type="text/javascript" src="../../Source/WebUIMessageBus/WebUIMessage.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
 
+   <script type="text/javascript" src="../../Source/AbstractDocument/AbstractDocument.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetElementFactory.js"></script> 
    <script type="text/javascript" src="../../Source/ComponentStateManager/DefaultStateUriTransformer.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/ComponentStateManager.js"></script>
