--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/ResourceUriTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/ResourceUriTest.html
@@ -25,6 +25,7 @@
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>
     
+   <script type="text/javascript" src="../../Source/AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/ResourceUri.js"></script>
