--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopDocumentTest.html
@@ -62,6 +62,7 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/LinkedHashMap.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/OptionsResource.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/RemoteResource.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/ResourceUri.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/TimeOutException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
