--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html
@@ -44,6 +44,7 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/ArrayList.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/HashMap.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/ResourceUri.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
    <script type="text/javascript" src="../../Source/HierarchicalMenuWidget/HierarchicalMenuWidget.js"></script>
