--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ToolBarWidget/ToolBarWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ToolBarWidget/ToolBarWidgetTest.html
@@ -53,6 +53,7 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/IllegalArgumentException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/LinkedHashMap.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/ResourceUri.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/UndefinedXmlResourceException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/UniqueId.js"></script>
