--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -100,6 +100,8 @@
    <script type="text/javascript" src="JavaScript/Source/Desktop/ResourceNotFoundException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/WindowDocker.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DocumentManager/DocumentManager.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/EventWidget/Event.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/EventWidget/EventWidget.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/ArrayList.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/HashMap.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/IllegalArgumentException.js"></script>
