--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -148,6 +148,14 @@
    <script type="text/javascript" src="JavaScript/Source/ToolBarWidget/ToolBarDivider.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ToolBarWidget/ToolBarButtonFactory.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ToolBarWidget/ToolBarWidget.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/TreeWidget/TreeNode.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/TreeWidget/TreeNodeFactory.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/TreeWidget/TreeNodeType.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/TreeWidget/CompositeTreeNode.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/TreeWidget/CompositeTreeNodeType.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/TreeWidget/LeafTreeNode.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/TreeWidget/RootTreeNode.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/TreeWidget/TreeWidget.js"></script>
    <script type="text/javascript" src="JavaScript/Source/WebUIController/UnconfiguredWebUIControllerException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/WebUIController/WebUIController.js"></script>
    <script type="text/javascript" src="JavaScript/Source/WebUILogger/WebUILogger.js"></script>
