--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TreeWidget/TreeWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TreeWidget/TreeWidgetTest.html
@@ -89,6 +89,9 @@
 <body>
    <h1>TreeWidget.js test page</H1>
    <p>This page contains tests for TreeWidget.js JavaScript class.</P>
-   <div id="TreeWidget"></div>
+   <div id="TreeWidget">
+      <div id="nodeBefore"></div>
+      <div id="nodeAfter"></div>
+   </div>
 </body>
 </html>
