--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
@@ -36,6 +36,7 @@
          newsuite.addTestPage("../ObjectTests/TabWidget/TabWidgetTestSuite.html");
          newsuite.addTestPage("../ObjectTests/TextAreaEditor/TextAreaEditorTestSuite.html");
          newsuite.addTestPage("../ObjectTests/ToolBarWidget/ToolBarWidgetTestSuite.html");
+         newsuite.addTestPage("../ObjectTests/TreeWidget/TreeWidgetTest.html");
          newsuite.addTestPage("../ObjectTests/WebUIConfiguration/WebUIConfigurationTest.html");
 //         newsuite.addTestPage("../ObjectTests/WebUIController/WebUIControllerTest.html");
          newsuite.addTestPage("../ObjectTests/WebUILogger/WebUILoggerTest.html");
