Add Slimbox JavaScript library.

--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -40,6 +40,7 @@
    <script type="text/javascript" src="JavaScript/Libraries/SlideShow/slideshow.fold.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/SlideShow/slideshow.kenburns.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/SlideShow/slideshow.push.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/Slimbox/slimbox.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/XMLforScript/xmlIO.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/XMLforScript/xmlEscape.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/XMLforScript/xmlsax.js"></script>
