BrowserWidget broadcasts WidgetConstructedMessage when construction finished.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/BrowserWidget/BrowserWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/BrowserWidget/BrowserWidgetTest.html
@@ -36,6 +36,7 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
 	
    <script type="text/javascript" src="../../Source/BrowserWidget/BrowserWidget.js"></script>
+   <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructedMessage.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetElementFactory.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/UnconfiguredWidgetException.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/DefaultStateUriTransformer.js"></script>
