--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/CompositeDataElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/CompositeDataElementTest.html
@@ -44,6 +44,7 @@
    <script type="text/javascript" src="../../Source/Singleton/Singleton.js"></script>
    <script type="text/javascript" src="../../Source/WebUIMessageBus/WebUIMessage.js"></script> 
 	
+   <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructedMessage.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetElementFactory.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/ArrayList.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/HashMap.js"></script>
