--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopPanelHeaderTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopPanelHeaderTest.html
@@ -41,6 +41,7 @@
 	
    <script type="text/javascript" src="../../Source/AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="../../Source/BrowserWidget/BrowserWidget.js"></script>
+   <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructedMessage.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetElementFactory.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/DefaultStateUriTransformer.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/ComponentStateManager.js"></script>
