--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/LanguageSelectorWidget/LanguageSelectorWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/LanguageSelectorWidget/LanguageSelectorWidgetTest.html
@@ -39,6 +39,7 @@
    <script type="text/javascript" src="../../Source/WebUIMessageBus/WebUIMessage.js"></script>
    
    <script type="text/javascript" src="../../Source/BrowserWidget/BrowserWidget.js"></script>
+   <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructedMessage.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetElementFactory.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/ArrayList.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/DefaultStateUriTransformer.js"></script>
