--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/PhotoGaleryWidget/PhotoGaleryWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/PhotoGaleryWidget/PhotoGaleryWidgetTest.html
@@ -51,6 +51,7 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
 
    <script type="text/javascript" src="../../Source/BrowserWidget/BrowserWidget.js"></script>
+   <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructedMessage.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetElementFactory.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/DefaultStateUriTransformer.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/ComponentStateManager.js"></script>
