--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/CompositeDocumentElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/CompositeDocumentElementTest.html
@@ -42,6 +42,7 @@
 	
    <script type="text/javascript" src="../../Source/AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="../../Source/BrowserWidget/BrowserWidget.js"></script>
+   <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructedMessage.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetElementFactory.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/UnconfiguredWidgetException.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/DefaultStateUriTransformer.js"></script>
