--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DocumentPluginTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DocumentPluginTest.html
@@ -47,6 +47,7 @@
 	
    <script type="text/javascript" src="../../Source/AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="../../Source/BrowserWidget/BrowserWidget.js"></script>
+   <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructedMessage.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetElementFactory.js"></script> 
    <script type="text/javascript" src="../../Source/Desktop/UnconfiguredDesktopElementException.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/DefaultStateUriTransformer.js"></script>
