Show different panel background when toolbar or tabs are shown.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopPanelHeaderTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopPanelHeaderTest.html
@@ -88,8 +88,11 @@
 </head>
 
 <body>
-	<h1>DesktopPanelHeader.js test page</H1>
-	<p>This page contains tests for DesktpPanelHeader.js JavaScript class.</P>
-	<div id="console_headerToolbox"></div>
+   <h1>DesktopPanelHeader.js test page</H1>
+   <p>This page contains tests for DesktpPanelHeader.js JavaScript class.</P>
+   <div id="console_header">
+      <div id="console_headerToolbox"></div>
+      <div id="console_headerContent"></div>
+	</div>
 </body>
 </html>
