--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -54,7 +54,7 @@
     
    <script type="text/javascript" src="JavaScript/Source/AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="JavaScript/Source/BrowserWidget/BrowserWidget.js"></script>
-   <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructedMessage.js"></script> 
+   <script type="text/javascript" src="JavaScript/Source/BrowserWidget/WidgetConstructedMessage.js"></script> 
    <script type="text/javascript" src="JavaScript/Source/BrowserWidget/WidgetElementFactory.js"></script> 
    <script type="text/javascript" src="JavaScript/Source/BrowserWidget/UnconfiguredWidgetException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ComponentStateManager/DefaultStateUriTransformer.js"></script>
