Use HTML5 test pages.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopDocumentTest.html
@@ -68,7 +68,12 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/TimeOutException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
    <script type="text/javascript" src="../../Source/HierarchicalMenuWidget/HierarchicalMenuWidget.js"></script>
+   <script type="text/javascript" src="../../Source/HierarchicalMenuWidget/MenuItem.js"></script>
+   <script type="text/javascript" src="../../Source/HierarchicalMenuWidget/MenuItemFactory.js"></script>
+   <script type="text/javascript" src="../../Source/HierarchicalMenuWidget/CompositeMenu.js"></script>
+   <script type="text/javascript" src="../../Source/HierarchicalMenuWidget/LeafMenuItem.js"></script>
    <script type="text/javascript" src="../../Source/HierarchicalMenuWidget/MenuSelectedMessage.js"></script>
+   <script type="text/javascript" src="../../Source/HierarchicalMenuWidget/RootMenu.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/Locale.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/LocaleUtil.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/ResourceKey.js"></script>
