--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DocumentManager/DocumentManagerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DocumentManager/DocumentManagerTest.html
@@ -1,8 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML>
 <html>
 <head>
    <title>Test page for DocumentManager.js</title>
-   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=8"/>
+   <meta HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
    <link rel="stylesheet" type="text/css" href="../../JsUnit/css/jsUnitStyle.css">
    
    <script type="text/javascript">
