--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DocumentManager/DocumentManagerTestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DocumentManager/DocumentManagerTestSuite.html
@@ -1,10 +1,11 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-"http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
 
 <html>
   <head>
 	<title>DocumentManager Test Suite</title>
-	<META http-equiv="Content-Type" content="text/html; charset=UTF-8">
+   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=8"/>
+   <meta HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
 
    <!-- JavaScript Unit -->
    <link rel="stylesheet" type="text/css" href="../../JsUnit/css/jsUnitStyle.css">
