--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/AbstractDocument/AbstractDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/AbstractDocument/AbstractDocumentTest.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <title>Test page for AbstractDocument.js</title>
-   <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
+   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=8"/>
    <meta HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
 	
