--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DocumentManager/HtmlDocument_hu.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DocumentManager/HtmlDocument_hu.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Strict//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Minta dokumentum</title>
+   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=8"/>
+   <meta HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
+   <title>Minta dokumentum</title>
 </head>
 <body>
 	<h1>Minta dokumentum</h1>
