XmlResource now add browser cache buster to the url if requested.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/OptionsResourceTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/OptionsResourceTest.html
@@ -31,14 +31,15 @@
 	
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
    
-   <script language="JavaScript" src="../../Source/FundamentalTypes/OptionsResource.js"></script>
-   <script language="JavaScript" src="../../Source/FundamentalTypes/UndefinedXmlResourceException.js"></script>
-   <script language="JavaScript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
-   <script language="JavaScript" src="../../Source/WebUIMessageBus/WebUIMessage.js"></script>
-   <script language="JavaScript" src="../../Source/WebUIMessageBus/TestMessageOne.js"></script>
-   <script language="JavaScript" src="../../Source/WebUIMessageBus/TestMessageTwo.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/OptionsResource.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/ResourceUri.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/UndefinedXmlResourceException.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
+   <script type="text/javascript" src="../../Source/WebUIMessageBus/WebUIMessage.js"></script>
+   <script type="text/javascript" src="../../Source/WebUIMessageBus/TestMessageOne.js"></script>
+   <script type="text/javascript" src="../../Source/WebUIMessageBus/TestMessageTwo.js"></script>
 	
-   <script language="JavaScript" src="../../ObjectTests/FundamentalTypes/OptionsResourceTest.js"></script>
+   <script type="text/javascript" src="../../ObjectTests/FundamentalTypes/OptionsResourceTest.js"></script>
    
    <script type="text/javascript">
       window.addEvent('domready', function() {
