--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/XmlResourceTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/XmlResourceTest.html
@@ -24,6 +24,7 @@
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>
 
+   <script type="text/javascript" src="../../Source/FundamentalTypes/ResourceUri.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/UndefinedXmlResourceException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
@@ -58,7 +59,7 @@
          assertNotNull( xmlResource.getDocument() );
          assertTrue( xmlResource.isSuccess() );
          assertTrue( !xmlResource.isAsync() );
-         assertEquals( RESOURCE_LOCATOR_ONE, xmlResource.getUri() );
+         assertThat( xmlResource.getUri(), containsString( RESOURCE_LOCATOR_ONE ));
       }
 
       function test_initialize_whenResourceLocationIsWrong_throwsException() {
@@ -115,7 +116,7 @@
 
          //VERIFY:
          assertTrue( xmlResource.isSuccess() );
-         assertEquals( RESOURCE_LOCATOR_ONE, xmlResource.getUri() );
+         assertThat( xmlResource.getUri(), containsString( RESOURCE_LOCATOR_ONE ));
       }
 
       function test_refresh_WhenParseOnCompleteIsFalse() {
