--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/LanguageSelectorWidget/LanguageSelectorWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/LanguageSelectorWidget/LanguageSelectorWidgetTest.html
@@ -48,6 +48,7 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/HashMap.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/ResourceUri.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/Locale.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/LocaleUtil.js"></script>
