--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/WebUIConfiguration/WebUIConfigurationTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/WebUIConfiguration/WebUIConfigurationTest.html
@@ -31,6 +31,7 @@
    
    <script type="text/javascript" src="../../Source/FundamentalTypes/ArrayList.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/ResourceUri.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/UndefinedXmlResourceException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
