--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
@@ -33,6 +33,7 @@
          newsuite.addTestPage("../ObjectTests/Singleton/SingletonTest.html");
          newsuite.addTestPage("../ObjectTests/SkinSelectorWidget/SkinSelectorWidgetTest.html");
          newsuite.addTestPage("../ObjectTests/SmartDocument/SmartDocumentTestSuite.html");
+         newsuite.addTestPage("../ObjectTests/SplashForm/SplashFormTest.html");
          newsuite.addTestPage("../ObjectTests/TabWidget/TabWidgetTestSuite.html");
          newsuite.addTestPage("../ObjectTests/TextAreaEditor/TextAreaEditorTestSuite.html");
          newsuite.addTestPage("../ObjectTests/ToolBarWidget/ToolBarWidgetTestSuite.html");
