--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML>
 <html>
 <head>
    <title>Test page for HierarchicalMenuWiget.js</title>
@@ -78,6 +78,7 @@
    });
    
    JsHamcrest.Integration.JsUnit();
+   JsMockito.Integration.JsUnit();   
    
    </script>
 </head>
