--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -143,6 +143,10 @@
    <script type="text/javascript" src="JavaScript/Source/ResourceManager/DocumentImage.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ResourceManager/DocumentScript.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ResourceManager/DocumentStyleSheet.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/ScrollBar/NoneExistingScrollableElementException.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/ScrollBar/ScrollBar.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/ScrollBar/ScrollArea.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/ScrollBar/SmoothScroll.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SkinSelectorWidget/SkinChangedMessage.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SkinSelectorWidget/SkinSelectorWidget.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SplashForm/SplashForm.js"></script>
