--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopPanelTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopPanelTest.html
@@ -34,6 +34,9 @@
    <script type="text/javascript" src="../../Libraries/MochaUI/Modal.js"></script>
    <script type="text/javascript" src="../../Libraries/MooEditable/MooEditable.js"></script>
    <script type="text/javascript" src="../../Libraries/MooEditable/MooEditable.Extras.js"></script>
+   <script type="text/javascript" src="../../Libraries/MooScroll/MooScroll.js"></script>
+   <script type="text/javascript" src="../../Libraries/MooScroll/MooScrollArea.js"></script>
+   <script type="text/javascript" src="../../Libraries/MooScroll/SmoothMooScroll.js"></script>
    <script type="text/javascript" src="../../Libraries/RemoteStyleSheet/RemoteStyleSheet.js"></script>
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>
