--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HtmlDocument/HtmlDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HtmlDocument/HtmlDocumentTest.html
@@ -43,6 +43,10 @@
 	
    <script type="text/javascript" src="../../Source/AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetElementFactory.js"></script>
+   <script type="text/javascript" src="../../Source/ComponentStateManager/StateTransformer.js"></script>
+   <script type="text/javascript" src="../../Source/ComponentStateManager/DefaultStateTransformer.js"></script>
+   <script type="text/javascript" src="../../Source/ComponentStateManager/FixedComponentOrderedTransformer.js"></script>
+   <script type="text/javascript" src="../../Source/ComponentStateManager/ComponentStateManager.js"></script>
    <script type="text/javascript" src="../../Source/Desktop/ComplexContentBehaviour.js"></script>
    <script type="text/javascript" src="../../Source/Desktop/DesktopElement.js"></script>
    <script type="text/javascript" src="../../Source/Desktop/DesktopWindow.js"></script>
